--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "tsx watch src/index.ts",
-        "build": "tsc",
+        "build": "npx prisma generate && tsc",
         "start": "node dist/index.js",
         "db:push": "prisma db push",
         "db:generate": "prisma generate"
@@ -12,6 +12,7 @@
     "dependencies": {
         "@hono/node-server": "^1.19.9",
         "@prisma/client": "^6.19.2",
+        "facebook-nodejs-business-sdk": "^24.0.1",
         "hono": "^4.11.7"
     },
     "devDependencies": {
