--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ESNext",
+        "module": "CommonJS",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
+        "resolveJsonModule": true
     },
     "include": [
         "src/**/*"
