--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "dev": "tsx watch src/index.ts",
-        "build": "npx prisma generate && tsc",
+        "build": "npx prisma generate && npx prisma db push && tsc",
         "start": "node dist/index.js",
         "db:push": "prisma db push",
         "db:generate": "prisma generate"
